Changing configs to make complete local redeployments easier.

--- a/sms_service/src/main/resources/application.properties
+++ b/sms_service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=sms-service
 server.port=8300
 
-spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/analytics
-spring.datasource.username = analytics_user
-spring.datasource.password = 123ejju3723h2
+spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/sms_db
+spring.datasource.username = sms_user
+spring.datasource.password = password
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
