--- a/email_service/src/main/resources/application.properties
+++ b/email_service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=email-service
 server.port=8200
 
-spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/analytics
-spring.datasource.username = analytics_user
-spring.datasource.password = 123ejju3723h2
+spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/email_db
+spring.datasource.username = email_user
+spring.datasource.password = password
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
