--- a/security_service/src/main/resources/application.properties
+++ b/security_service/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=security-service
 server.port=8000
 
-spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/auth_db?currentSchema=auth_001
+# spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/auth_db?currentSchema=auth_001
+spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/auth_db
 spring.datasource.username = auth_user
-spring.datasource.password = jrtji3892jfj
+spring.datasource.password = password
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
