Simplified project build. Working on registration process.

--- a/email_service/src/main/resources/application.properties
+++ b/email_service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=email-service
 server.port=8200
 
-spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/email_db
-spring.datasource.username = email_user
+spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/nt_db
+spring.datasource.username = nt_user
 spring.datasource.password = password
 
 spring.jpa.hibernate.ddl-auto=update
