--- a/error_service/src/main/resources/application.properties
+++ b/error_service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=error-service
 server.port=8400
 
-spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/error_db
-spring.datasource.username = error_user
+spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/nt_db
+spring.datasource.username = nt_user
 spring.datasource.password = password
 
 spring.jpa.hibernate.ddl-auto=update
