--- a/oesa_service/src/main/resources/application.properties
+++ b/oesa_service/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.jpa.show-sql=true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
-spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/npt_db
-spring.datasource.username = npt_user
+spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/nt_db
+spring.datasource.username = nt_user
 spring.datasource.password = password
 
 spring.jpa.hibernate.ddl-auto=update
