--- a/sms_service/src/main/resources/application.properties
+++ b/sms_service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=sms-service
 server.port=8300
 
-spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/sms_db
-spring.datasource.username = sms_user
+spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/nt_db
+spring.datasource.username = nt_user
 spring.datasource.password = password
 
 spring.jpa.hibernate.ddl-auto=update
