--- a/admin_front/package.json
+++ b/admin_front/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^2.1.3",
+    "react-tabs": "^6.0.2",
     "tailwindcss": "^3.3.3",
     "tw-elements": "^1.0.0",
     "validator": "^13.11.0"
