Breaking out the faqs into their own service.

--- a/faqs_service/src/main/resources/application.properties
+++ b/faqs_service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=oesa-service
 server.port=8085
 
-# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
