--- a/website_service/pom.xml
+++ b/website_service/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.2.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.nephew.faqs</groupId>
-	<artifactId>faqs-service</artifactId>
+	<groupId>com.nephew.website</groupId>
+	<artifactId>website-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>faqs-service</name>
+	<name>website-service</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>21</java.version>
@@ -34,12 +34,7 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
-		<!-- http://localhost:8095/swagger-ui/index.html -->
-		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.2.0</version>
-		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
