--- a/egi_front/package.json
+++ b/egi_front/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "^2.0.18",
     "@react-email/components": "0.0.6",
     "@react-email/render": "^0.0.9",
+    "@stripe/stripe-js": "^2.3.0",
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
     "postcss": "^8.4.29",
