--- a/api_gateway/src/main/resources/application.properties
+++ b/api_gateway/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=api-gateway
-server.port=8765
+# server.port=8765
+
+server.port=8443
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=password
+# server.ssl.key-alias=
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
