--- a/website_service/src/main/resources/application.properties
+++ b/website_service/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=website-service
 server.port=8090
 
-# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
